basics.html edited

--- a/HTML/Basics/basic.html
+++ b/HTML/Basics/basic.html
@@ -13,14 +13,14 @@
     <div style="display:flex; flex-direction:column">
         <!-- this division will contain one column 
              inside that colulmn all the div will be appear as rows -->
-        <div style="display:flex; flex-direction:row; background-color: rgb(85, 82, 82)">
+        <div style="display:flex; flex-direction:row; background-color: rgb(85, 82, 82); padding: 10px;">
             <!-- this division will contain one row 
              inside that row all the div will be appear as columns -->
-            <div style="display:flex; flex-direction:column; background-color:rgb(131, 117, 117)">
+            <div style="display:flex; flex-direction:column; background-color:rgb(131, 117, 117); padding: 100px;">
                 <p>main page</p>
                 <p>content</p>
             </div>
-            <div style="display:flex; flex-direction:column; background-color:rgb(156, 145, 145)">
+            <div style="display:flex; flex-direction:column; background-color:rgb(156, 145, 145); padding: 450px;">
                 <p>navigation bar</p>
                 <p>welcome</p>
                 <p>
@@ -29,7 +29,7 @@
                 <p>other infomation</p>
             </div>
         </div>
-        <div style=" background-color:rgb(124, 170, 124) ">
+        <div style=" background-color:rgb(118, 122, 118); padding: 80px;">
             footer
         </div>
     </div>
